deployments/cloud/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: algorand-lending
  labels:
    name: algorand-lending
    app.kubernetes.io/name: algorand-lending-platform
    app.kubernetes.io/version: "1.0"
    environment: production
